// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnonymousFunctionLiteral 1`] = `
{
  "argument": {
    "definitions": [
      {
        "identifier": {
          "_meta": {
            "end": {
              "column": 7,
              "line": 1,
              "offset": 6,
            },
            "start": {
              "column": 2,
              "line": 1,
              "offset": 1,
            },
          },
          "kind": "ValueIdentifier",
          "value": "value",
        },
        "kind": "NamedDefinition",
        "typeTag": {
          "identifier": {
            "kind": "TypeIdentifier",
            "value": "number",
          },
          "kind": "TypeTag",
        },
      },
    ],
    "kind": "RecordDefinition",
  },
  "block": {
    "kind": "Block",
    "statements": [
      {
        "expression": {
          "_meta": {
            "end": {
              "column": 34,
              "line": 1,
              "offset": 33,
            },
            "start": {
              "column": 29,
              "line": 1,
              "offset": 28,
            },
          },
          "kind": "ValueIdentifier",
          "value": "value",
        },
        "kind": "ReturnStatement",
      },
    ],
  },
  "kind": "AnonymousFunctionLiteral",
}
`;

exports[`AnonymousFunctionLiteral.emptyArg 1`] = `
{
  "argument": {
    "definitions": [],
    "kind": "RecordDefinition",
  },
  "block": {
    "kind": "Block",
    "statements": [
      {
        "expression": {
          "kind": "NumberLiteral",
          "value": 3,
        },
        "kind": "ReturnStatement",
      },
    ],
  },
  "kind": "AnonymousFunctionLiteral",
}
`;

exports[`FunctionCall 1`] = `
{
  "argument": {
    "definitions": [
      {
        "expression": {
          "kind": "StringLiteral",
          "value": "hello",
        },
        "identifier": {
          "_meta": {
            "end": {
              "column": 8,
              "line": 1,
              "offset": 7,
            },
            "start": {
              "column": 5,
              "line": 1,
              "offset": 4,
            },
          },
          "kind": "ValueIdentifier",
          "value": "msg",
        },
        "kind": "NamedLiteral",
      },
    ],
    "kind": "RecordLiteral",
  },
  "identifier": {
    "_meta": {
      "end": {
        "column": 4,
        "line": 1,
        "offset": 3,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "kind": "ValueIdentifier",
    "value": "log",
  },
  "kind": "FunctionCall",
}
`;

exports[`FunctionCall.emtpyArg 1`] = `
{
  "argument": {
    "definitions": [],
    "kind": "RecordLiteral",
  },
  "identifier": {
    "_meta": {
      "end": {
        "column": 4,
        "line": 1,
        "offset": 3,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "kind": "ValueIdentifier",
    "value": "log",
  },
  "kind": "FunctionCall",
}
`;
